--- a/fundamental algebra and analysis/封装模板.tex
+++ b/fundamental algebra and analysis/封装模板.tex
@@ -173,7 +173,7 @@
 \newtheorem{notation}{\color{slv}Notation}[section]
 \newtheorem{lemma}{Lemma}[section]
 \newenvironment{definitionenv}{\begin{lvse}\begin{definitin}}{\end{definitin}\end{lvse}}
-\newenvironment{notationenv}{\begin{lvse}\begin{definitin}}{\end{definitin}\end{lvse}}
+\newenvironment{notationenv}{\begin{lvse}\begin{notation}}{\end{notation}\end{lvse}}
 \newenvironment{proofenv}{\begin{lanse}\begin{prof}}{$\hfill \square$\end{prof}\end{lanse}}
 \newenvironment{theoremenv}{\begin{huangse}\begin{theorem}}{\end{theorem}\end{huangse}}
 \newenvironment{exampleenv}{\begin{zise}\begin{example}}{\end{example}\end{zise}}
